--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -24,7 +24,7 @@ body {
     // }
 }
 
-input, textarea {
+input:not[type="radio"], textarea {
     -webkit-appearance: none;
 }
 
